# Bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: config.py  main.py
bot/utils/: audio.py  downloader.py  logging.py
tests/: test_audio.py  test_downloader.py  test_handlers.py  test_real_downloads.py
